syntax = "proto3";

message File {
  int32 id = 1;
  string filename = 2;
  int32 size = 3;
}

message FilePreUploadRequest {
  string filename = 1;
  int32 size = 2;
}

message FilePreUploadResponse {
  int32 id = 1;
  string url = 2;
}

message GetFilesResponse {
  repeated File project_files = 1;
  repeated File template_files = 2;
}

message GetSubtaskFilesResponse {
  repeated File files = 1;
}

message GetFileResponse {
  File file = 1;
}

message GetFileDownloadResponse {
  string url = 1;
}

message AttachFileRequest {
  int32 id = 1;
}